Calculate interpolation from round trip time, crude implementation

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,4 +8,4 @@ INCLUDE_DIRECTORIES(
 
 ADD_DEFINITIONS(-DGLHCK_KAZMATH_FLOAT -DUSE_SINGLE_PRECISION)
 ADD_EXECUTABLE(server ${SERVER_SRC})
-TARGET_LINK_LIBRARIES(server enet)
+TARGET_LINK_LIBRARIES(server enet rt)
