--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(CLIENT_SRC
   ${glhck_SOURCE_DIR}/include
   ${GLFW_SOURCE_DIR}/include
   ${srv.birth_SOURCE_DIR}/common
+  ${enet_SOURCE_DIR}/src/include
 )
 ADD_EXECUTABLE(srv.birth ${CLIENT_SRC})
 TARGET_LINK_LIBRARIES(srv.birth glhck glfw enet ${GLFW_LIBRARIES})
